scaffolded audit logs

--- a/UserManagement.WebApp/Components/Layout/NavMenu.razor
+++ b/UserManagement.WebApp/Components/Layout/NavMenu.razor
@@ -18,6 +18,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User List
             </NavLink>
         </div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="userauditlogs">
+				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>User Audit Logs
+			</NavLink>
+		</div>
     </nav>
 </div>
 
