--- a/UserManagement.WebApp/Components/Layout/NavMenu.razor
+++ b/UserManagement.WebApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">UserManagement.WebApp</a>
+        <a class="navbar-brand" href="">Info Tech Test</a>
     </div>
 </div>
 
